--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,5 +15,5 @@ jobs:
       - name: Build application
         run: make
         
-      - name: Build test
-        run: make test
+      - name: Build test application tests
+        run: make test && ./bin/test
